Thu Mar  2 10:58:19 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Begun to abstract statistics requesting and collecting operations
	  (common/stats.h)

	* Made heirarchy of Match objects: Match, LeafMatch, MultiMatch.

Thu Mar  2 10:39:20 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added locks to OmDatabase methods

Wed Mar  1 19:14:02 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Separated OmDatabase out from OmEnquire, and fixed the tests.

Tue Feb 29 17:41:32 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Change OmMatch to LeafMatch.  Make LeafMatch inherit from Match,
	  which is currently an empty class, but will be a base class for
	  all match objects.

Tue Feb 29 10:49:54 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Fixed apitest following the stemming changes

	* Fixed a bug which broke query length calculation

Mon Feb 28 17:26:01 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added a test for the query collapsing, along with a fix.

Mon Feb 28 16:32:22 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Queries now combine identical terms into a single term
	  with the sum of the wqfs in some cases.

Mon Feb 28 13:09:18 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Query lengths are now automatically calculated

	* Some tests of the query length calculation are now in apitest

Fri Feb 25 16:38:46 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added a test for -Wno-long-long in configure.in

Fri Feb 25 14:29:00 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Separated most of OmQuery into an OmQueryInternal class.

	* Locks in the OmQuery methods

Thu Feb 24 20:10:28 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Added test for behaviour when trying to use a file which doesn't
	  exist.

Thu Feb 24 16:12:16 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Changed DBPostlist to LeafPostlist.
